public/v/release-3.1/_sources/robots/nova_developer_kit/getting_started.rst.txt
Getting Started
===============

To guarantee optimal functionality of supported applications on `Nova Orin Developer Kit`,
please follow all steps introduced below before installing it on your robot.

.. include:: /../shared/_snippets/nova_devkit/getting_started.rst

.. _nova-developer-kit-dev-setup:

Prerequisites
-------------

If you consider using `Nova Orin Developer Kit` only through the pre-built docker image,
continue to Visualization Setup. Otherwise, you should complete Isaac ROS Development Environment,
repositories, and visualization setup before proceeding to run the applications.

Isaac ROS Development Environment Setup (Optional)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

If you consider using the `Nova Orin Developer Kit` only through the pre-built docker image,
you can proceed to :ref:`tutorials <robots/nova_developer_kit/getting_started:Tutorials>`.
Otherwise,

.. include:: /_snippets/set_up_dev_env.rst

.. note::

    We recommend that you connect the `Nova Orin Developer Kit` through Ethernet in this step.
    Building a Docker image for the development environment takes longer time in the first time
    you run it. Expect faster spin-up of the development environment after the first cached build.

Repositories Setup (Optional)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

1. Clone ``nova_developer_kit`` repository under ``${ISAAC_ROS_WS}/src``:

   .. code:: bash

      cd ${ISAAC_ROS_WS}/src && \
        git clone --recursive :ir_clone:`<nova_developer_kit>`

2. Create a file called ``.isaac_ros_common-config`` with the following context:

   .. code:: bash

      cd ${ISAAC_ROS_WS}/src/isaac_ros_common/scripts
      echo -e "CONFIG_IMAGE_KEY=ros2_humble.nova_developer_kit\nCONFIG_DOCKER_SEARCH_DIRS=(../../nova_developer_kit/docker ../docker)" > .isaac_ros_common-config

3. Create a file called ``.isaac_ros_dev-dockerargs`` with the following
   context:

   .. code:: bash

      cd ${ISAAC_ROS_WS}/src/isaac_ros_common/scripts
      echo -e "-v /etc/nova/:/etc/nova/" > .isaac_ros_dev-dockerargs

4. Launch the Docker container using the ``run_dev.sh`` script:

   .. code:: bash

      cd ${ISAAC_ROS_WS}/src/isaac_ros_common && \
        ./scripts/run_dev.sh

5. Clone the dependency repositories using the ``vcstool`` file in the ``nova_developer_kit`` repository:

   .. code:: bash

      cd /workspaces/isaac_ros-dev
      vcs import --recursive src < src/nova_developer_kit/nova_developer_kit.repos

.. _visualization-setup-devkit:

Visualization Setup
~~~~~~~~~~~~~~~~~~~

To visualize and evaluate outputs from camera-based perception applications, you should
follow those steps on your remote machine.

1. Complete the :ref:`Foxglove setup <foxglove-setup>` guide. Make sure to
   :ref:`install additional Nvblox Foxglove extension<nvblox-foxglove-ext>`.

2. Download all Foxglove layout configurations available in
   :ir_repo:`nova_developer_kit repository <nova_developer_kit> <nova_developer_kit_bringup/foxglove_layouts>`.

Tutorials
---------

You are recommended to go through following tutorials to visualize sensor outputs, and prepare
running camera-based perception on your robot.

Visualizing Sensors Outputs on the `Nova Orin Developer Kit`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Follow the :doc:`Tutorial: Run all Sensors on the Nova Orin Developer Kit </reference_workflows/isaac_perceptor/tutorials_on_devkit/demo_sensors>`.

Running Camera-based 3D Perception on a Robot
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Follow the :doc:`Tutorial: Camera-based 3D Perception with Isaac Perceptor with the Nova Orin Developer Kit</reference_workflows/isaac_perceptor/tutorials_on_devkit/demo_perceptor>`.
